// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentsService Create & update 1`] = `true`;

exports[`ContentsService List Contents first 1`] = `
Object {
  "children": Object {},
  "createAt": "",
  "id": "",
  "page": true,
  "parentId": "",
  "priority": 1000,
  "title": "TOP",
  "title_type": 1,
  "updateAt": "",
  "value": "",
  "value_type": "HTML",
  "visible": true,
}
`;

exports[`ContentsService List ContentsTree 1`] = `
Object {
  "children": Object {
    "0": Object {
      "children": Object {
        "0": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 1,
          "title": "Next",
          "title_type": 1,
          "updateAt": "",
          "value": "",
          "value_type": "HTML",
          "visible": true,
        },
        "1": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 2,
          "title": "Next 1",
          "title_type": 1,
          "updateAt": "",
          "value": "<div>内容1</div>",
          "value_type": "HTML",
          "visible": true,
        },
        "2": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 3,
          "title": "Next 0",
          "title_type": 1,
          "updateAt": "",
          "value": "<div>内容0</div>",
          "value_type": "HTML",
          "visible": true,
        },
        "3": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 4,
          "title": "Before 0",
          "title_type": 1,
          "updateAt": "",
          "value": "<div>内容0</div>",
          "value_type": "HTML",
          "visible": true,
        },
        "4": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 5,
          "title": "Before 1",
          "title_type": 1,
          "updateAt": "",
          "value": "<div>内容1</div>",
          "value_type": "HTML",
          "visible": true,
        },
        "5": Object {
          "children": Object {},
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 6,
          "title": "Before",
          "title_type": 1,
          "updateAt": "",
          "value": "",
          "value_type": "HTML",
          "visible": true,
        },
        "6": Object {
          "children": Object {
            "0": Object {
              "children": Object {},
              "createAt": "",
              "id": "",
              "page": true,
              "parentId": "",
              "priority": 1,
              "title": "ChildLast 0",
              "title_type": 1,
              "updateAt": "",
              "value": "<div>内容0</div>",
              "value_type": "HTML",
              "visible": true,
            },
            "1": Object {
              "children": Object {},
              "createAt": "",
              "id": "",
              "page": true,
              "parentId": "",
              "priority": 2,
              "title": "ChildLast 1",
              "title_type": 1,
              "updateAt": "",
              "value": "<div>内容1</div>",
              "value_type": "HTML",
              "visible": true,
            },
          },
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 7,
          "title": "ChildLast",
          "title_type": 1,
          "updateAt": "",
          "value": "",
          "value_type": "HTML",
          "visible": true,
        },
        "7": Object {
          "children": Object {
            "0": Object {
              "children": Object {},
              "createAt": "",
              "id": "",
              "page": true,
              "parentId": "",
              "priority": 1,
              "title": "ChildFirst 1",
              "title_type": 1,
              "updateAt": "",
              "value": "<div>内容1</div>",
              "value_type": "HTML",
              "visible": true,
            },
            "1": Object {
              "children": Object {},
              "createAt": "",
              "id": "",
              "page": true,
              "parentId": "",
              "priority": 2,
              "title": "ChildFirst 0",
              "title_type": 1,
              "updateAt": "",
              "value": "<div>内容0</div>",
              "value_type": "HTML",
              "visible": true,
            },
          },
          "createAt": "",
          "id": "",
          "page": true,
          "parentId": "",
          "priority": 8,
          "title": "ChildFirst",
          "title_type": 1,
          "updateAt": "",
          "value": "",
          "value_type": "HTML",
          "visible": true,
        },
      },
      "createAt": "",
      "id": "",
      "page": true,
      "parentId": "",
      "priority": 1,
      "title": "タイトル0",
      "title_type": 1,
      "updateAt": "",
      "value": "<div>内容1</div>",
      "value_type": "HTML",
      "visible": true,
    },
  },
  "createAt": "",
  "id": "",
  "page": true,
  "parentId": "",
  "priority": 1000,
  "title": "TOP",
  "title_type": 1,
  "updateAt": "",
  "value": "",
  "value_type": "HTML",
  "visible": true,
}
`;

exports[`ContentsService List ContentsTree(set visible) 1`] = `
Object {
  "children": Object {
    "0": Object {
      "children": Object {
        "0": Object {
          "children": Object {},
          "id": "",
          "parentId": "",
          "title": "Next",
        },
        "1": Object {
          "children": Object {},
          "id": "",
          "parentId": "",
          "title": "Next 1",
        },
        "2": Object {
          "children": Object {},
          "id": "",
          "parentId": "",
          "title": "Next 0",
        },
        "3": Object {
          "children": Object {},
          "id": "",
          "parentId": "",
          "title": "Before 0",
        },
        "4": Object {
          "children": Object {},
          "id": "",
          "parentId": "",
          "title": "Before 1",
        },
        "5": Object {
          "children": Object {},
          "id": "",
          "parentId": "",
          "title": "Before",
        },
        "6": Object {
          "children": Object {
            "0": Object {
              "children": Object {},
              "id": "",
              "parentId": "",
              "title": "ChildLast 0",
            },
            "1": Object {
              "children": Object {},
              "id": "",
              "parentId": "",
              "title": "ChildLast 1",
            },
          },
          "id": "",
          "parentId": "",
          "title": "ChildLast",
        },
        "7": Object {
          "children": Object {
            "0": Object {
              "children": Object {},
              "id": "",
              "parentId": "",
              "title": "ChildFirst 1",
            },
            "1": Object {
              "children": Object {},
              "id": "",
              "parentId": "",
              "title": "ChildFirst 0",
            },
          },
          "id": "",
          "parentId": "",
          "title": "ChildFirst",
        },
      },
      "id": "",
      "parentId": "",
      "title": "タイトル0",
    },
  },
  "id": "",
  "parentId": "",
  "title": "TOP",
}
`;
